tests/good/simple41.tig
var x := 2
var y := (x := x-1; 1) & (x := x-2; 0)
var z := 1/x