tests/bad/simple19.tig
var x := 0
var y := range(0,1) & (x := x+1; 0)
var z := 1/x